[gd_scene load_steps=25 format=3 uid="uid://cals3vw0vj1j7"]

[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="1_fjp12"]
[ext_resource type="Script" path="res://scripts/uis/main_menu/MainMenu.gd" id="1_ucjxi"]
[ext_resource type="Animation" uid="uid://cx04at5pdf11i" path="res://assets/animations/camera_scroll.res" id="2_rkel8"]
[ext_resource type="Texture2D" uid="uid://cto6ho6cpiuyw" path="res://assets/textures/ui/little_rage_logo.png" id="3_4yirm"]
[ext_resource type="PackedScene" uid="uid://0sui0mov7cam" path="res://scenes/levels/TitleScreenLevel.tscn" id="3_gaxhl"]
[ext_resource type="Animation" uid="uid://b52wj1p1e1ckf" path="res://assets/animations/logo_move.res" id="6_6jai1"]
[ext_resource type="LabelSettings" uid="uid://deaqu53istr0t" path="res://assets/style/label_settings/small_label.tres" id="9_0et4q"]
[ext_resource type="Animation" uid="uid://cx2cp7vkuhysr" path="res://assets/animations/splash_text_zoom.res" id="9_c25sm"]
[ext_resource type="Texture2D" uid="uid://c5yejwo4hxfqa" path="res://assets/textures/ui/icons/red-circle.png" id="9_gumy7"]
[ext_resource type="Script" path="res://scripts/uis/main_menu/SplashText.gd" id="9_uac2h"]
[ext_resource type="Script" path="res://scripts/uis/main_menu/Information.gd" id="10_5eid8"]
[ext_resource type="Script" path="res://scripts/uis/LootBoxCountNotifier.gd" id="10_5hwgr"]

[sub_resource type="Animation" id="Animation_u5ewi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a6sbu"]
_data = {
"RESET": SubResource("Animation_u5ewi"),
"scroll": ExtResource("2_rkel8")
}

[sub_resource type="Animation" id="Animation_layq8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c4w7r"]
resource_name = "start_menu"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1, 1.4, 1.8),
"transitions": PackedFloat32Array(1, 0.318471, 0.318471, 0.318471),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1), Vector2(0.5, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 0.318471),
"update": 0,
"values": [Vector2(1280, 0), Vector2(320, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.218166, 0.0]
}

[sub_resource type="Animation" id="Animation_l7ody"]
resource_name = "start_menu_easter"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.9, 1, 1.4, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 3.14, 1, 3.14, 1, 3.14, 1, 3.14),
"update": 0,
"values": [Vector2(1280, 0), Vector2(1100, 0), Vector2(1100, 0), Vector2(1000, 0), Vector2(1000, 0), Vector2(900, 0), Vector2(900, 0), Vector2(320, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0.75, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5, 1.8, 2),
"transitions": PackedFloat32Array(1, 3.14, 1),
"update": 0,
"values": [0.0, -0.0523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3umms"]
_data = {
"RESET": SubResource("Animation_layq8"),
"logo_move": ExtResource("6_6jai1"),
"start_menu": SubResource("Animation_c4w7r"),
"start_menu_easter": SubResource("Animation_l7ody")
}

[sub_resource type="LabelSettings" id="LabelSettings_vn81g"]
font_size = 8
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.501961)
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_jhdw0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2kdcr"]
_data = {
"RESET": SubResource("Animation_jhdw0"),
"zoom": ExtResource("9_c25sm")
}

[sub_resource type="Animation" id="Animation_0iwv6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lmfb0"]
resource_name = "zoom"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 0.318471, 3.14),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.125, 1.125), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pvj0d"]
_data = {
"RESET": SubResource("Animation_0iwv6"),
"zoom": SubResource("Animation_lmfb0")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ucjxi")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
"": SubResource("AnimationLibrary_a6sbu")
}

[node name="TitleScreenLevel" parent="." instance=ExtResource("3_gaxhl")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Logo" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 360.0
grow_horizontal = 2
texture = ExtResource("3_4yirm")
expand_mode = 1
stretch_mode = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Logo"]
libraries = {
"": SubResource("AnimationLibrary_3umms")
}

[node name="SplashText" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -81.0
offset_right = -37.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.436332
mouse_filter = 1
theme = ExtResource("1_fjp12")
text = "Hello, world!"
label_settings = SubResource("LabelSettings_vn81g")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_uac2h")
texts = Array[String](["On Godot 4.2 Now!", "NO Local Multiplayer!", "By Killar.exe", "Remmake!", "On Mobile!", "Back!", "A Cool Game!", "New Levels!", "Better than the unity version!", "Thanks to Niark", "Multiplayer in progress...", "WIP", "#TeamJAVA", "OOF", "RIP", "Press F for respects", "btw watch Doctor Who", "btw play Minecraft", "It's time to touch some grass kid...", "Hot Street", "My Bad", "Negative-N", "Dimensional Expansion", "@everyone", "@here", "PSR-48", "Deez Nuts", "Hello Mario", "SFW Memes", "Open Source!!!", "Bug free...", "Little Game", "Avaliable on itch.io", "Made in France", "Avaliable for Windows, Linux, Mac and Android!", "#TeamReglisse", "Technoblade never dies!", "WOWIEEE", "Wait this game was created since 2021!", "LMMS > FLStudio", "Try Rust btw", "Neovim is the best text editor", "don't forget  \":!q\" to quit!", "fn main(){println!(\"Hello, world!\")}", "Pff assembly isn't that difficult...", "0.5.1b!", "Wow thats really cool!", "I should make a devlog series on this game...", "Thanks to the testers!", "Thanks to Rainer!", "Thanks to 10e", "Steve help me! I'm stuck!", "Thanks to Me!", "Thank you for playing!", "We need a logo!", "Try MSLang!", "Gzkki, Mieks!", "Hello, world!", "Foo bar = new Foo();", "Since 2021!", "I've suffered ", "Seamus Youre the best :)", "Brainstorming...", "[HYPERLINK BLOCKED]", "Corry - thePlaceHolder 11/09/2023 15:07", "Niark ur the best!", "1STI2D1", "We can do screenshots now!", "Try Windowkill btw", "WOW Follin bros killin", "Plok OST is one of the best SNES OST", "the 2A03 is well made", "Sir, he was listening Boss - Plok.", "*Makes a string with 3 saw waves*", "SCP-079 is the next one...", "I use Arch btw!", " I cooked my music with Furnace", "Discord RPC implementation break the game...", "Try SCP:SL btw.", "Try Linux btw.", "Bro, Little Rage is 3 years old!", "Heyo check my .dotfiles setup!", "Are you reading this?", "Do you know: There is many easter eggs here...", "*Plok's distortion guitar playing*", "Wait, the majority of the instruments are Mario 64 instruments !?", "Wait this isn't my flag!", "Godot is really a great engine!", "Dev tips: export your music in .ogg", "Youtube buzz = watch time + CTR", "C64's SID is crasy!", "I'm a bad Web Dev...", "I'm tried. I switch to the Y axis...", "Wow amazing you got the reference!", "pacman -Syu", "sudo", "Finally don't do \":q!\", do \":qa\" instead!", "Get on the floor", "Wait, we can automate exports with github actions?", "100th splash text!", "Tardis Refined is a great mod!", "Yay more cosmetics!!!"])

[node name="Button" type="Button" parent="CanvasLayer/SplashText"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fjp12")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/SplashText"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_2kdcr")
}
speed_scale = 0.5

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 64)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -294.0
offset_top = -96.0
offset_right = -38.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_fjp12")
text = "button.settings"

[node name="QuitButton" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(256, 64)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = -96.0
offset_right = 289.0
offset_bottom = -32.0
grow_vertical = 0
theme = ExtResource("1_fjp12")
text = "button.quit"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = 102.0
offset_right = 192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.99669)
theme = ExtResource("1_fjp12")
alignment = 1

[node name="SingleplayerButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme = ExtResource("1_fjp12")
text = "button.singleplayer"

[node name="MultiplayerButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(384, 64)
layout_mode = 2
theme = ExtResource("1_fjp12")
disabled = true
text = "button.multiplayer"

[node name="ShopButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme = ExtResource("1_fjp12")
text = "button.collections"

[node name="Circle" type="TextureRect" parent="CanvasLayer/VBoxContainer/ShopButton" node_paths=PackedStringArray("count_label")]
offset_left = -16.0
offset_top = -15.0
offset_right = 24.0
offset_bottom = 25.0
pivot_offset = Vector2(19, 20)
texture = ExtResource("9_gumy7")
expand_mode = 4
script = ExtResource("10_5hwgr")
count_label = NodePath("LootBoxCount")

[node name="LootBoxCount" type="Label" parent="CanvasLayer/VBoxContainer/ShopButton/Circle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.5
offset_right = 20.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/VBoxContainer/ShopButton/Circle"]
libraries = {
"": SubResource("AnimationLibrary_pvj0d")
}
autoplay = "zoom"

[node name="LevelEditorButton" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(384, 64)
layout_mode = 2
theme = ExtResource("1_fjp12")
text = "button.level_editor"

[node name="Information" type="Label" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_fjp12")
text = "Version Null. By Killar.exe"
label_settings = ExtResource("9_0et4q")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_5eid8")

[node name="Button" type="Button" parent="CanvasLayer/Information"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 414.0
offset_right = -414.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="CanvasLayer/SplashText/Button" to="CanvasLayer/SplashText" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/SingleplayerButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/LevelEditorButton" to="." method="_on_level_editor_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Information/Button" to="CanvasLayer/Information" method="_on_button_pressed"]
